完善索引定义相关代码，索引创建mappings 描述映射类

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>elasticsearch-helper-beans</module>
         <module>elasticsearch-helper-core</module>
         <module>elasticsearch-helper-parent</module>
+        <module>elasticsearch-helper-view</module>
+        <module>elasticsearch-helper-sample</module>
         <module>elasticsearch-helper-boot-starter</module>
     </modules>
 
