--- a/elasticsearch-helper-parent/pom.xml
+++ b/elasticsearch-helper-parent/pom.xml
@@ -35,17 +35,23 @@
                 <version>${root.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.poet</groupId>
+                <artifactId>elasticsearch-helper-view</artifactId>
+                <version>${root.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.elasticsearch.client</groupId>
                 <artifactId>elasticsearch-rest-high-level-client</artifactId>
                 <version>${elasticsearch.client.version}</version>
-                <scope>provided</scope>
+                <scope>compile</scope>
             </dependency>
 
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
                 <version>${jackson.core.version}</version>
-                <scope>provided</scope>
+                <scope>compile</scope>
             </dependency>
 
             <dependency>
