--- a/elasticsearch-helper-parent/pom.xml
+++ b/elasticsearch-helper-parent/pom.xml
@@ -18,7 +18,11 @@
         <plugin.maven.compiler.version>3.8.1</plugin.maven.compiler.version>
         <elasticsearch.client.version>7.8.1</elasticsearch.client.version>
         <jackson.core.version>2.10.1</jackson.core.version>
+        <google.guava.version>23.0</google.guava.version>
+        <apache.collections4.version>4.1</apache.collections4.version>
+        <apache.common.lang3.version>3.5</apache.common.lang3.version>
         <slf4j.api.version>1.7.28</slf4j.api.version>
+
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -58,13 +62,26 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson.core.version}</version>
-                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-annotations</artifactId>
                 <version>${jackson.core.version}</version>
-                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${apache.common.lang3.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${google.guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${apache.collections4.version}</version>
             </dependency>
 
 
@@ -72,7 +89,6 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.api.version}</version>
-                <scope>provided</scope>
             </dependency>
 
             <dependency>
