--- a/elasticsearch-helper-boot-starter/pom.xml
+++ b/elasticsearch-helper-boot-starter/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.poet</groupId>
+        <groupId>org.pippi</groupId>
         <artifactId>elasticsearch-helper-parent</artifactId>
         <version>1.0.0</version>
         <relativePath>../elasticsearch-helper-parent/pom.xml</relativePath>
