--- a/elasticsearch-helper-parent/pom.xml
+++ b/elasticsearch-helper-parent/pom.xml
@@ -21,6 +21,7 @@
         <google.guava.version>23.0</google.guava.version>
         <apache.collections4.version>4.1</apache.collections4.version>
         <apache.common.lang3.version>3.5</apache.common.lang3.version>
+        <org.reflections.version>0.9.12</org.reflections.version>
         <slf4j.api.version>1.7.28</slf4j.api.version>
 
         <junit.version>4.12</junit.version>
@@ -85,6 +86,12 @@
             </dependency>
 
 
+            <!-- utils-->
+            <dependency>
+                <groupId>org.reflections</groupId>
+                <artifactId>reflections</artifactId>
+                <version>${org.reflections.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -97,6 +104,9 @@
                 <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
+
+
+
 
         </dependencies>
     </dependencyManagement>
