--- a/elasticsearch-helper-view/pom.xml
+++ b/elasticsearch-helper-view/pom.xml
@@ -22,8 +22,8 @@
             <artifactId>elasticsearch-helper-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.pippi</groupId>
-            <artifactId>elasticsearch-helper-core</artifactId>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
         </dependency>
 
     </dependencies>
