--- a/elasticsearch-helper-sample/src/main/resources/log4j.properties
+++ b/elasticsearch-helper-sample/src/main/resources/log4j.properties
@@ -6,9 +6,9 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p --- [%20t] %c{1}:%L - %m%n
 
 log4j.appender.err=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.err.threshold=ERROR
+log4j.appender.err.threshold=INFO
 log4j.appender.err.Append=true
-log4j.appender.err.File=F:/logs/error.log
+log4j.appender.err.File=./logs/error.log
 log4j.appender.err.DatePattern='.'yyyy-MM-dd
 log4j.appender.err.layout=org.apache.log4j.PatternLayout
 log4j.appender.err.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p --- [%20t] %c{1}:%L - %m%n
