--- a/elasticsearch-helper-sample/pom.xml
+++ b/elasticsearch-helper-sample/pom.xml
@@ -47,6 +47,13 @@
             <version>2.5</version>
         </dependency>
 
+        <!--   mysql     -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.21</version>
+        </dependency>
+
 
     </dependencies>
 
