--- a/elasticsearch-helper-boot-starter/pom.xml
+++ b/elasticsearch-helper-boot-starter/pom.xml
@@ -2,15 +2,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
-        <groupId>org.pippi</groupId>
-        <artifactId>elasticsearch-helper-parent</artifactId>
-        <version>1.0.0</version>
-        <relativePath>../elasticsearch-helper-parent/pom.xml</relativePath>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starters</artifactId>
+        <version>2.2.2.RELEASE</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>elasticsearch-helper-boot-starter</artifactId>
+    <version>1.0.0</version>
 
+    <properties>
+        <spring.boot.version>2.2.2.RELEASE</spring.boot.version>
+        <elasticsearch.helper.version>1.0.0</elasticsearch.helper.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>2.2.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.pippi</groupId>
+            <artifactId>elasticsearch-helper-core</artifactId>
+            <version>${elasticsearch.helper.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
