--- a/elasticsearch-helper-boot-starter/pom.xml
+++ b/elasticsearch-helper-boot-starter/pom.xml
@@ -4,18 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starters</artifactId>
-        <version>2.2.2.RELEASE</version>
+        <groupId>org.pippi</groupId>
+        <artifactId>elasticsearch-helper-parent</artifactId>
+        <version>1.0.0.SNAPSHOT</version>
+        <relativePath>../elasticsearch-helper-parent/pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>elasticsearch-helper-boot-starter</artifactId>
-    <version>1.0.0</version>
 
     <properties>
         <spring.boot.version>2.2.2.RELEASE</spring.boot.version>
-        <elasticsearch.helper.version>1.0.0</elasticsearch.helper.version>
     </properties>
 
     <dependencies>
@@ -27,7 +26,6 @@
         <dependency>
             <groupId>org.pippi</groupId>
             <artifactId>elasticsearch-helper-core</artifactId>
-            <version>${elasticsearch.helper.version}</version>
         </dependency>
     </dependencies>
 
