--- a/elasticsearch-helper-core/pom.xml
+++ b/elasticsearch-helper-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.pippi</groupId>
         <artifactId>elasticsearch-helper-parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.0.SNAPSHOT</version>
         <relativePath>../elasticsearch-helper-parent/pom.xml</relativePath>
     </parent>
 
