--- a/elasticsearch-helper-sample/pom.xml
+++ b/elasticsearch-helper-sample/pom.xml
@@ -2,41 +2,41 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <groupId>org.pippi</groupId>
-        <artifactId>elasticsearch-helper-parent</artifactId>
-        <version>1.0.0</version>
-        <relativePath>../elasticsearch-helper-parent/pom.xml</relativePath>
-    </parent>
+
+
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>org.pippi</groupId>
     <artifactId>elasticsearch-helper-sample</artifactId>
+    <version>1.0.0.SNAPSHOT</version>
 
+    <properties>
+        <root.version>1.0.0.SNAPSHOT</root.version>
+        <java.version>1.8</java.version>
+        <plugin.maven.compiler.version>3.8.1</plugin.maven.compiler.version>
+        <spring.boot.version>2.2.0.RELEASE</spring.boot.version>
+    </properties>
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.pippi</groupId>
             <artifactId>elasticsearch-helper-core</artifactId>
+            <version>1.0.0.SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.elasticsearch.client</groupId>
-            <artifactId>elasticsearch-rest-high-level-client</artifactId>
-        </dependency>
-        <!--    日志    -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.25</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.5</version>
+            <groupId>org.pippi</groupId>
+            <artifactId>elasticsearch-helper-boot-starter</artifactId>
+            <version>1.0.0.SNAPSHOT</version>
         </dependency>
 
         <!--   mysql     -->
@@ -48,5 +48,19 @@
 
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${plugin.maven.compiler.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
