--- a/elasticsearch-helper-boot-starter/pom.xml
+++ b/elasticsearch-helper-boot-starter/pom.xml
@@ -5,9 +5,8 @@
 
     <parent>
         <groupId>org.pippi</groupId>
-        <artifactId>elasticsearch-helper-parent</artifactId>
+        <artifactId>elasticsearch-helper</artifactId>
         <version>1.0.0.SNAPSHOT</version>
-        <relativePath>../elasticsearch-helper-parent/pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
