--- a/elasticsearch-helper-core/pom.xml
+++ b/elasticsearch-helper-core/pom.xml
@@ -4,9 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.pippi</groupId>
-        <artifactId>elasticsearch-helper-parent</artifactId>
+        <artifactId>elasticsearch-helper</artifactId>
         <version>1.0.0.SNAPSHOT</version>
-        <relativePath>../elasticsearch-helper-parent/pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
