--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <java.version>1.8</java.version>
         <plugin.maven.compiler.version>3.8.1</plugin.maven.compiler.version>
 
+        <spring.boot.version>2.2.0.RELEASE</spring.boot.version>
         <elasticsearch.client.version>7.13.3</elasticsearch.client.version>
         <jackson.core.version>2.10.1</jackson.core.version>
         <google.guava.version>23.0</google.guava.version>
