--- a/elasticsearch-helper-boot-starter/pom.xml
+++ b/elasticsearch-helper-boot-starter/pom.xml
@@ -11,6 +11,8 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>elasticsearch-helper-boot-starter</artifactId>
+    <version>1.0.0.SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
