--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.pippi</groupId>
     <artifactId>elasticsearch-helper</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0.SNAPSHOT</version>
+    <version>${root.version}</version>
 
     <licenses>
         <license>
