--- a/elasticsearch-helper-boot-starter/pom.xml
+++ b/elasticsearch-helper-boot-starter/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>org.pippi</groupId>
         <artifactId>elasticsearch-helper</artifactId>
-        <version>1.0.0.SNAPSHOT</version>
+        <version>1.0.0.RELEASE</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>elasticsearch-helper-boot-starter</artifactId>
-    <version>1.0.0.SNAPSHOT</version>
+    <version>1.0.0.RELEASE</version>
 
     <build>
         <plugins>
