--- a/elasticsearch-helper-core/pom.xml
+++ b/elasticsearch-helper-core/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>org.pippi</groupId>
         <artifactId>elasticsearch-helper</artifactId>
-        <version>1.0.0.SNAPSHOT</version>
+        <version>1.0.0.RELEASE</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>elasticsearch-helper-core</artifactId>
-    <version>1.0.0.SNAPSHOT</version>
+    <version>1.0.0.RELEASE</version>
 
     <build>
         <plugins>
