--- a/elasticsearch-helper-core/pom.xml
+++ b/elasticsearch-helper-core/pom.xml
@@ -3,12 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.pippi</groupId>
+        <groupId>io.github.johendeng</groupId>
         <artifactId>elasticsearch-helper</artifactId>
         <version>1.0.0.SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
+    <groupId>io.github.johendeng</groupId>
     <artifactId>elasticsearch-helper-core</artifactId>
     <version>1.0.0.SNAPSHOT</version>
 
