--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.pippi</groupId>
+    <groupId>io.github.johendeng</groupId>
     <artifactId>elasticsearch-helper</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0.SNAPSHOT</version>
@@ -50,12 +50,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.pippi</groupId>
+                <groupId>io.github.johendeng</groupId>
                 <artifactId>elasticsearch-helper-core</artifactId>
                 <version>${root.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.pippi</groupId>
+                <groupId>io.github.johendeng</groupId>
                 <artifactId>elasticsearch-helper-boot-starter</artifactId>
                 <version>${root.version}</version>
             </dependency>
