--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <developers>
         <developer>
-            <name>JohenDeng</name>
+            <name>JohenTeng</name>
             <email>1078481395@qq.com</email>
             <url>https://github.com/Johendeng/elasticsearch-helper</url>
         </developer>
