--- a/elasticsearch-helper-core/pom.xml
+++ b/elasticsearch-helper-core/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>io.github.johendeng</groupId>
         <artifactId>elasticsearch-helper</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.1-RELEASE</version>
     </parent>
 
     <groupId>io.github.johendeng</groupId>
     <artifactId>elasticsearch-helper-core</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1-RELEASE</version>
     <modelVersion>4.0.0</modelVersion>
 
     <build>
