--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.github.johendeng</groupId>
     <artifactId>elasticsearch-helper</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1-RELEASE</version>
 
     <licenses>
         <license>
@@ -52,12 +52,12 @@
             <dependency>
                 <groupId>io.github.johendeng</groupId>
                 <artifactId>elasticsearch-helper-core</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.1-RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>io.github.johendeng</groupId>
                 <artifactId>elasticsearch-helper-boot-starter</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.1-RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.elasticsearch.client</groupId>
