--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>io.github.johendeng</groupId>
     <artifactId>elasticsearch-helper</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-RELEASE</version>
+
+    <name>elasticsearch-helper</name>
+    <description>build ElasticSearch-query by Java annotation, simplify code struct</description>
+    <url>https://github.com/Johendeng/elasticsearch-helper</url>
 
     <licenses>
         <license>
@@ -52,12 +55,12 @@
             <dependency>
                 <groupId>io.github.johendeng</groupId>
                 <artifactId>elasticsearch-helper-core</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.0-RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>io.github.johendeng</groupId>
                 <artifactId>elasticsearch-helper-boot-starter</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.0-RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.elasticsearch.client</groupId>
@@ -141,17 +144,6 @@
         <developerConnection>https://github.com/Johendeng/elasticsearch-helper</developerConnection>
     </scm>
 
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
-
     <build>
         <plugins>
             <plugin>
@@ -163,9 +155,9 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
-
     <profiles>
         <profile>
             <id>release</id>
@@ -235,5 +227,4 @@
             </distributionManagement>
         </profile>
     </profiles>
-
 </project>
