--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
     </modules>
 
     <properties>
-        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <plugin.maven.compiler.version>3.8.1</plugin.maven.compiler.version>
 
@@ -151,8 +152,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${plugin.maven.compiler.version}</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
 
