refactor(1.0.1): 修改包结构

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
     <modules>
         <module>elasticsearch-helper-core</module>
         <module>elasticsearch-helper-boot-starter</module>
+        <module>elasticsearch-helper-sample</module>
+        <module>elasticsearch-helper-test</module>
     </modules>
 
     <properties>
