--- a/elasticsearch-helper-sample/pom.xml
+++ b/elasticsearch-helper-sample/pom.xml
@@ -17,4 +17,17 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.github.johendeng</groupId>
+            <artifactId>elasticsearch-helper-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
