--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>elasticsearch-helper-boot-starter</module>
         <module>elasticsearch-helper-sample</module>
         <module>elasticsearch-helper-test</module>
+        <module>elasticsearch-helper-lambda</module>
     </modules>
 
     <properties>
