--- a/elasticsearch-helper-lambda/pom.xml
+++ b/elasticsearch-helper-lambda/pom.xml
@@ -12,8 +12,17 @@
     <artifactId>elasticsearch-helper-lambda</artifactId>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.github.johendeng</groupId>
+            <artifactId>elasticsearch-helper-core</artifactId>
+        </dependency>
+
+    </dependencies>
 </project>
