feat(2.0.0) 更新部分实现，新增lambda包

--- a/elasticsearch-helper-lambda/pom.xml
+++ b/elasticsearch-helper-lambda/pom.xml
@@ -12,6 +12,11 @@
     <groupId>org.pippi.elasticsearch.helper</groupId>
     <artifactId>elasticsearch-helper-lambda</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>io.github.johendeng</groupId>
+            <artifactId>elasticsearch-helper-model</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
