--- a/elasticsearch-helper-sample/src/main/resources/application.yml
+++ b/elasticsearch-helper-sample/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 
-es:
-  helper:
-    queryLogOut:
-      enable: true
-    ext:
-      handle-packages: com.example.elasticsearchhelpersample.config.handlers
+server:
+  port: 8080
+
+es-helper:
+  config:
+    ext-handler-packages: com.example.eshelper.handlers
+    log:
+      statement: true
+    process:
+      map-underscore-to-camel-case: true
+      field-strategy: not_null
